--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "mews/purifier": "^3.3"
+        "mews/purifier": "^3.3",
+        "morilog/jalali": "^3.2",
+        "yajra/laravel-datatables-oracle": "^9.19"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
@@ -24,6 +26,9 @@
         "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
+        "files": [
+            "app/Helpers/Helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
