--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
     "require": {
         "php": "^8.0.2",
         "amir-hossein5/laravel-image": "^2.1",
+        "cesargb/laravel-cascade-delete": "^1.3",
+        "cviebrock/eloquent-sluggable": "^9.0",
+        "dyrynda/laravel-cascade-soft-deletes": "^4.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
