--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "amir-hossein5/laravel-image": "^2.1",
         "cesargb/laravel-cascade-delete": "^1.3",
         "cviebrock/eloquent-sluggable": "^9.0",
+        "doctrine/dbal": "^3.3",
         "dyrynda/laravel-cascade-soft-deletes": "^4.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
