--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
+DB_DATABASE=esam
+DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -31,8 +31,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.googlemail.com
 MAIL_PORT=587
-MAIL_USERNAME=adada51166115@gmail.com
-MAIL_PASSWORD=alimation
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 MAIL_FROM_NAME="${APP_NAME}"
 
